[tool.poetry]
name = "poetry-plugin-export"
version = "1.0.5"
description = "Poetry plugin to export the dependencies to various formats"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "poetry_plugin_export", from = "src" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0b3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
poetry = {git = "https://github.com/python-poetry/poetry.git"}
mypy = ">=0.961"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.black]
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true

[tool.mypy]
show_error_codes = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
files = ["src", "tests"]
exclude = ["^tests/fixtures/"]
namespace_packages = true

[[tool.mypy.overrides]]
module = [
  'cleo.*',
]
ignore_missing_imports = true

# use of importlib-metadata backport at python3.7 makes it impossible to
# satisfy mypy without some ignores: but we get a different set of ignores at
# different python versions.
#
# <https://github.com/python/mypy/issues/8823>, meanwhile suppress that
# warning.
[[tool.mypy.overrides]]
module = [
  'poetry_plugin_export',
  'tests.compat',
]
warn_unused_ignores = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
