[tool.poetry]
name = "poetry-plugin-export"
version = "1.3.0"
description = "Poetry plugin to export the dependencies to various formats"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://python-poetry.org/"
repository = "https://github.com/python-poetry/poetry-plugin-export"

packages = [
    { include = "poetry_plugin_export", from = "src" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.3.0"
poetry-core = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.18"
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-mock = "^3.9"
pytest-randomly = "^3.12"
pytest-xdist = { version = "^3.1", extras = ["psutil"] }
mypy = ">=0.971"

# only used in github actions
[tool.poetry.group.github-actions]
optional = true
[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.black]
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true

[tool.mypy]
namespace_packages = true
show_error_codes = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
files = ["src", "tests"]
exclude = ["^tests/fixtures/"]

# use of importlib-metadata backport at python3.7 makes it impossible to
# satisfy mypy without some ignores: but we get a different set of ignores at
# different python versions.
#
# <https://github.com/python/mypy/issues/8823>, meanwhile suppress that
# warning.
[[tool.mypy.overrides]]
module = [
  'poetry_plugin_export',
]
warn_unused_ignores = false


[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = [
    "tests"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
